--- a/SuDungHamCoSan/Bai1.html
+++ b/SuDungHamCoSan/Bai1.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Exercise</title>
 </head>
 <body>
-
+<script>
+    let myColor = ["Red", "Green", "White", "Black"];
+    let newMyColor = myColor.join();
+    document.write(newMyColor);
+</script>
 </body>
 </html>
