--- a/LuyenTap01/Bai2.html
+++ b/LuyenTap01/Bai2.html
@@ -10,7 +10,7 @@
     for (i = 0; i < 10; i++) {
         newArr[i] = parseInt(prompt('Nhap phan tu thu ' + i));
     }
-    let max = 0;
+    let max = newArr[0];
     let index = 0;
     // console.log(max);
     // console.log(newArr);
