--- a/LuyenTap01/Bai3.html
+++ b/LuyenTap01/Bai3.html
@@ -11,7 +11,7 @@
     for (i = 0; i < num; i++) {
         newArr[i] = parseInt(prompt('Nhap phan tu thu ' + i));
     }
-    let max = 0;
+    let max = newArr[0];
     let total = 0
     // console.log(max);
     // console.log(newArr);
